--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,12 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>5.4.29.Final</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
